--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -161,7 +161,7 @@ document.write(year);
     <SCRIPT>TA_STATS_ARGS = {}</SCRIPT>
 
 
-    <LINK rel=stylesheet href="/css/tomorrow.css">
+    <LINK rel=stylesheet href="../css/tomorrow.css">
     <SCRIPT src="/js/jquery.highlight.js"></SCRIPT>
 
     <SCRIPT>hljs.initHighlightingOnLoad();</SCRIPT>
