--- a/src/main/resources/templates/dataItem/im-shopgavguv-citys.html
+++ b/src/main/resources/templates/dataItem/im-shopgavguv-citys.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="common::commonHeader('城市业务转化量随时间变化')">
+<head th:replace="common::commonHeader('单个城市平均uv')">
     <link th:href="@{/css/bootstrap-datetimepicker.min.css}" rel="stylesheet" media="screen">
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" media="screen">
 
@@ -9,24 +9,16 @@
 <SCRIPT>var _speedMark = Date.now()</SCRIPT>
 <script>
     $(function(){
-        $.ajax({
-            url:"../getCitys",
-            type :"get",
-            dataType : "JSON",
-            data : {},
-            success: function(data){
-                for(var i=0;i<data.length;i++){
-                    $("#city").append('<option value="'+ data[i].name + '">'+data[i].name+'</option>');
-                }
 
-            }
-        })
-        $("#starttime").val(formate7dayago());
+        $("#starttime").val(formateyesterday());
         $("#endtime").val(formateyesterday());
         showCharts();
-
         $("#search_btn").click(function(){
             showCharts();
+        })
+
+        $("#count_time").click(function(){
+            window.open("../dataItem/im-shopgavguv-citys1")
         })
     })
 
@@ -40,6 +32,7 @@
         var yyyyMMdd = curr_year + "-" + curr_month +"-"+ curr_date;
         return yyyyMMdd;
     };
+
     function formateyesterday(){
         var d = new Date();
         d.setTime(d.getTime()-24*60*60*1000);
@@ -51,20 +44,21 @@
         var yyyyMMdd = curr_year + "-" + curr_month +"-"+ curr_date;
         return yyyyMMdd;
     };
-    function formate7dayago(){
+
+    function formatedayago(ago){
         var d = new Date();
-        d.setTime(d.getTime()-7*24*60*60*1000);
+        d.setTime(d.getTime()-24*60*60*1000*ago);
         var curr_date = d.getDate();
         var curr_month = d.getMonth() + 1;
         var curr_year = d.getFullYear();
         String(curr_month).length < 2 ? (curr_month = "0" + curr_month): curr_month;
         String(curr_date).length < 2 ? (curr_date = "0" + curr_date): curr_date;
-        var yyyyMMdd = curr_year + "-" + curr_month +"-"+ curr_date;
+        var yyyyMMdd = curr_year + "" + curr_month +""+ curr_date;
         return yyyyMMdd;
     };
 
     function change_city(){
-//        alert($("#city").val());
+        alert($("#city").val());
 //        $(".form_date").datetimepicker("setDate", _speedMark);
     };
 
@@ -112,25 +106,18 @@
 
 <DIV class=content-bd  style="padding-top: 5px;" >
     <div class="row-container">
-        <div class="form-group col-lg-2">
-            <div class="input-group">
-                <span class="input-group-addon">城市</span>
-                <select id="city" class="form-control" >
-                    <!--<option value="北京">北京</option>-->
-                </select>
-            </div>
-        </div>
-        <div class="form-group col-lg-2">
-            <div class="input-group">
-                <span class="input-group-addon">业务分类</span>
-                <select id="imServiceType" class="form-control"  >
-                    <option value="二手房挂牌">二手房</option>
-                    <option value="新房挂牌">新房</option>
-                    <option value="家居挂牌">家居</option>
-                    <option value="租房挂牌">租房</option>
-                </select>
-            </div>
-        </div>
+        <!--<div class="form-group col-lg-2">-->
+            <!--<div class="input-group">-->
+                <!--<span class="input-group-addon">业务分类</span>-->
+                <!--<select id="imChatMessageType" class="form-control" multiple onchange="change_city()">-->
+                    <!--<option value="agent">二手房挂牌</option>-->
+                    <!--<option value="commerce">三房挂牌</option>-->
+                    <!--<option value="home">家居挂牌</option>-->
+                    <!--<option value="consultant">广告</option>-->
+                <!--</select>-->
+            <!--</div>-->
+        <!--</div>-->
+
         <div class="form-group col-lg-3">
             <div class="input-group">
                 <span class="input-group-addon">开始时间</span>
@@ -154,6 +141,8 @@
             <input type="hidden" id="dtp_input2" value="" /><br/>
         </div>
         <div class="form-group col-lg-1"> <button class="btn btn-primary" id="search_btn">查询</button> </div>
+
+        <div class="form-group col-lg-1"> <button class="btn btn-primary" id="count_time">单个城市统计</button> </div>
     </div>
         <p id="neirong" style="text-align: center; color: #FF0000">&nbsp;</p>
         <p>&nbsp;</p>
@@ -167,25 +156,22 @@
             <div class="marks-msg with-title"><!-- 左边带标题 with-title -->
                 <DIV class=data-bd>
                     <div id="main" style="height:400px"></div>
-                    <script th:inline="javascript">
+                    <script>
                         function showCharts(){
-
+                            var $actionday=formateyesterday();
                             /*<![CDATA[*/
                             // 基于准备好的dom，初始化echarts图表
                             var app = echarts.init(document.getElementById('main'));
                             var $starttime =$("#starttime").val().replace("-","").replace("-","");
                             var $endtime =$("#endtime").val().replace("-","").replace("-","");
-                            var $city =  $("#city").val() == null ? "上海":$("#city").val();
-                            var $business = $("#imServiceType").val();
+                            var $city = $("#city").val() == null ? "上海,北京,广州,深圳" : $("#city").val()
+
                             $.ajax({
-                                url:"../imstatics/getonecitydaycount3?actionday="+$starttime+","+$endtime+"&city="+$city+"&business="+$business,
-//                                url:"/imstatics/getcitypercentage1?actionday="+$starttime+","+$endtime+"&city="+$city,
-//                                url:"/imstatics/getonecitypercentage2?actionday="+$starttime+","+$endtime+"&city="+$("#city").val(),
+                                url:"../imstatics/getLoupanAvgUv?actionday="+$starttime+","+$endtime+"&city=北京,上海,广州,深圳,天津,武汉,成都,南京,青岛,杭州,重庆",
                                 type :"get",
                                 dataType : "JSON",
                                 data : {},
                                 success: function(data){
-
 
                                     option = {
                                         tooltip: {
@@ -203,6 +189,7 @@
                                         },
                                         calculable: true,
                                         legend: {
+//                                            data: ['聊天量','全国平均聊天量']
                                             data: data.line
                                         },
                                         xAxis: [
@@ -214,16 +201,16 @@
                                         yAxis: [
                                             {
                                                 type: 'value',
-                                                name: '人数',
+                                                name: '聊天数',
                                                 axisLabel: {
                                                     formatter: '{value}'
                                                 }
                                             },
                                             {
                                                 type: 'value',
-                                                name: '转化率',
+                                                name: '全国平均聊天量',
                                                 axisLabel: {
-                                                    formatter: '{value} %'
+                                                    formatter: '{value}'
                                                 }
                                             }
                                         ],
@@ -236,7 +223,6 @@
 
                             })
                         }
-
                     </script>
                 </DIV>
             </div>
@@ -244,16 +230,16 @@
     </div>
 
 </DIV>
-<!--<DIV class=page-right>-->
-    <!--<DIV class=Catalog-box>-->
-        <!--<DIV id=Catalog-box></DIV>-->
-        <!--<DIV class=complaints>-->
-            <!--<UL>-->
-                <!--<LI><A href="#">返回顶部</A></LI>-->
-            <!--</UL>-->
-        <!--</DIV>-->
-    <!--</DIV>-->
-<!--</DIV>-->
+<DIV class=page-right>
+    <DIV class=Catalog-box>
+        <DIV id=Catalog-box></DIV>
+        <DIV class=complaints>
+            <UL>
+                <LI><A href="#">返回顶部</A></LI>
+            </UL>
+        </DIV>
+    </DIV>
+</DIV>
 <DIV th:include="common::footer" class=footer>
 </DIV>
 <!--<script type="text/javascript" th:src="@{/js/bootstrap.js}"></script>-->
