--- a/src/main/resources/templates/dataItem/im-analyse-list.html
+++ b/src/main/resources/templates/dataItem/im-analyse-list.html
@@ -122,7 +122,7 @@
                         taskHtml += '<td>' + data[i].to + '</td>';
                         taskHtml += '<td>' + data[i].contents + '</td>';
                         taskHtml += '<td style="display: none">' + data[i].actionday + '</td>';
-                        taskHtml += '<td> <a href="/im-analyse-more/'+data[i].messageid+'/'+data[i].actionday+'"target="view_window">详情</a></td>';
+                        taskHtml += '<td> <a href="../im-analyse-more/'+data[i].messageid+'/'+data[i].actionday+'"target="view_window">详情</a></td>';
                         taskHtml += '</tr>';
                     }
                     $('#myTable tbody').html(taskHtml);
